# FLOCK-Net

./: README.md
notebooks/: pyproject.toml
notebooks/notebooks/: audio_compression.ipynb
research/: pyproject.toml
