[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Kamal Narra <kamalnarra1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
birdnetlib = "^0.11.0"
ipykernel = "^6.25.2"
librosa = "^0.10.1"
ffmpeg = "^1.4"
tflite = "^2.10.0"
tensorflow = {extras = ["and-cuda"], version = "^2.14.0"}
resampy = "^0.4.2"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
